app/assets/stylesheets/print.css.scss
// Place all the styles related to the print controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.print-options {
    width: 100%;
    margin-top: 4px;
}

.divider {
    font-size: 100px;
    text-align: center;
}

.input-micro {
    width: 30px;
    display: inline-block;
}

#main {
    height: 400px;
}

.col {
    top: 50%;
    position: relative;
}

.choice-span {
    text-align: center;
    margin-top: -50px;
}

.file-span {
    margin-top: -50px;
}

.page-header h1 {
    text-align: center;
}

footer {
    margin-top: 18px;
    padding-top: 17px;
    border-top: 1px solid #EEE;
}

footer p {
    text-align: center;
}

footer p a {
    color: #404040;
}

footer p a:hover {
    color: #404040;
}

#disclaimer {
    font-size: 8pt;
    color: #BBBBBB;
}

#disclaimer a {
    color: #BBBBBB;
}

#disclaimer a:hover {
    color: #BBBBBB;
}

input, input::-webkit-input-placeholder, input:-moz-placeholder {
    color: #404040
}

@media (min-width: 768px) and (max-width: 979px) {
    .divider {
        visibility: hidden !important;
    }
    
    .choice-span {
        margin-right: 20px;
    }
    
    .print-span {
        margin-top: -20px;
    }
}

@media (max-width: 767px) {
    .divider {
        display: none !important;
    }
    
    .col {
        top: 0;
        margin-top: 7.5% !important;
    }
    
    #main {
        height: auto;
    }
}

